checking css to fix image size and exercise width on mobile

--- a/css/chapter.css
+++ b/css/chapter.css
@@ -7,7 +7,8 @@
     display: inline-block;
     color: inherit;
     text-decoration: none;
-    width: 65em;
+    width: 90%;
+    /* width: 65em; */
 
     margin: 1pt 0;
 
