--- a/css/sols.css
+++ b/css/sols.css
@@ -138,6 +138,7 @@ details.solution-details[open] summary::after {
 
 .img-container {
     align-self: center;
+    scale: 90%;
 }
 
 
